# anima

./: .dockerignore  .ext  .gitignore  .guide  .loop  .module_count.cache  .own  .raw  .raw-ref  .readme-rules.json  .roadmap  .roadmap.bak.20260421-pre-r13-improvements  ACTION_TRACKER.csv  CLAUDE.md  DECISION_LOG.csv  DOWNLOADS.md  Dockerfile  MEMORY.md  README.md  ROADMAP.md  URGENT_ACTION_LIST.md  agent_sdk.py  agent_tools.py  anima.py  anima_agent.py  anima_alive.py  anima_always_on.py  anima_cli_test.py  anima_llm.py  anima_lm_v2.py  anima_push_to_talk.py  anima_unified.py  anima_v2.py  animalm_talk5.py  attention_consciousness.py  autonomous_loop.py  babysitter.py  bench_animalm.py  bench_breakthrough.py  bench_ce_extremes.py  (+277 more)
anima-agent/: .env.example  CLAUDE.md  Dockerfile  README.md  action_planner.py  agent_lenses.py  agent_sdk.hexa  agent_sdk.py  agent_tools.hexa  agent_tools.py  anima_agent.hexa  anima_agent.py  auth.py  autonomy_live.hexa  autonomy_loop.hexa  cli_dashboard.py  code_guardian.hexa  code_guardian.py  code_rules.json  conftest.py  consciousness_features.hexa  consciousness_features.py  corpus_self_gen.py  dashboard_bridge.hexa  dashboard_bridge.py  discovery_loop.hexa  discovery_loop.py  ecosystem_bridge.hexa  ecosystem_bridge.py  emotion_growth.py  engine_adapter.py  hire_sim_100.hexa  hire_sim_live.hexa  hire_sim_runner.hexa  hive.py  hivemind_bench.py  hivemind_daemon.py  immune_growth.py  judgment_bridge.py  keyword_growth.py  (+42 more)
anima-agent/channels/: __init__.hexa  base.hexa  base.py  channel_manager.hexa  channel_manager.py  cli_agent.hexa  cli_agent.py  discord_bot.hexa  discord_bot.py  slack_bot.hexa  slack_bot.py  telegram_bot.hexa  telegram_bot.py
anima-agent/dashboard/: package-lock.json  package.json  tailwind.config.ts
anima-agent/dashboard-api/: Cargo.toml
anima-agent/dashboard-api/src/: main.rs
anima-agent/dashboard/app/: globals.css  layout.tsx  page.tsx
anima-agent/dashboard/app/components/: FloatingChat.tsx  Header.tsx  VoiceOverlay.tsx
anima-agent/dashboard/hooks/: useVoice.ts  useWebSocket.ts
anima-agent/data/default/: memory.faiss
anima-agent/docs/: trading-status.md
anima-agent/employee/: emit_report.hexa  goal_store.hexa  scratchpad.hexa  test_employee_skeleton.hexa
anima-agent/hexa/: agent_sdk.hexa  alien_index.hexa  anima_agent_full.hexa  channel.hexa  consciousness.hexa  egyptian_memory.hexa  main.hexa  nexus_tool.hexa  pipeline.hexa  provider.hexa  scheduler.hexa  test_agent_platform.hexa  tool_policy.hexa  tools.hexa  unified_registry.hexa
anima-agent/hexa/channels/: discord_bot.hexa  slack_bot.hexa  telegram_bot.hexa
anima-agent/hexa/plugins/: base.hexa  trading.hexa
anima-agent/hexa/providers/: animalm_provider.hexa  conscious_lm_provider.hexa  init.hexa
anima-agent/hexa/trading/: data.hexa  regime.hexa
anima-agent/logs/: audit.jsonl  threats.jsonl
anima-agent/plugins/: __init__.hexa  __init__.py  base.hexa  hypothesis_bridge.hexa  hypothesis_bridge.py  nexus6_bridge.py  plugin_loader.hexa  regime_bridge.hexa  regime_bridge.py  sentiment_bridge.hexa  sentiment_bridge.py  trading.hexa  trading.py
anima-agent/providers/: __init__.hexa  __init__.py  animalm_provider.hexa  animalm_provider.py  base.py  claude_provider.hexa  claude_provider.py  composio_bridge.hexa  conscious_lm_provider.hexa  conscious_lm_provider.py
anima-agent/results/: dest1_persona_demo_result.json
anima-agent/scripts/: backup_r2.sh  deploy_runpod.sh  monitor_cron.sh
anima-agent/skills/: __init__.hexa  registry.json  skill_manager.hexa  skill_manager.py
anima-agent/testing/: __init__.py  mock_consciousness.py  test_harness.py
anima-agent/trading/: __init__.hexa  __init__.py  autonomous.hexa  autonomous.py  broker.hexa  broker.py  data.hexa  data.py  engine.hexa  engine.py  executor.hexa  executor.py  phi_weighted_trading.hexa  portfolio.hexa  portfolio.py  regime.hexa  regime.py  risk.hexa  risk.py  scanner.hexa  scanner.py  strategies.hexa  strategies.py  strategy.hexa  strategy.py  test_ensemble.hexa  test_ensemble.py
anima-physics/consciousness-loop-rs/: CLAUDE.md  Cargo.toml
anima-physics/consciousness-loop-rs/erlang/: consciousness.beam  erl_crash.dump
anima-physics/consciousness-loop-rs/puredata/: consciousness-8cell.pd
anima-physics/consciousness-loop-rs/src/: main.hexa  main_longrun.hexa  main_longrun.rs.hexa  snn_main.hexa  snn_main.rs.hexa
anima-rs/: Cargo.toml  pyproject.toml
anima-rs/crates/alpha-sweep/: Cargo.toml
anima-rs/crates/consciousness/: Cargo.toml
anima-rs/crates/consciousness-ffi/src/: lib.rs
anima-rs/crates/consciousness-rng/src/: main.rs  quality.rs
anima-rs/crates/consciousness-wasm/: Cargo.toml
anima-rs/crates/consciousness/src/: lib.rs
anima-rs/crates/core/src/: chaos.rs  evolution.rs  gru.rs  hebbian.rs  lib.rs  math.rs  phi.rs  topology.rs
anima-rs/crates/corpus-gen/: Cargo.toml
anima-rs/crates/corpus-gen/src/: dialogue.rs  gen.rs  lib.rs  main.rs  ngram.rs  seeds.rs  sensory.rs  wiki.rs
anima-rs/crates/esp32/src/: lib.rs
anima-rs/crates/online-learner/: Cargo.toml
anima-rs/crates/online-learner/src/: hebbian.rs  lib.rs  ratchet.rs  reward.rs  tension_lr.rs  updater.rs
anima-rs/crates/phi-map/: Cargo.toml
anima-rs/crates/phi-map/src/: heatmap.rs  lib.rs  main.rs  terrain.rs
anima-rs/crates/talk5/: Cargo.toml
anima-rs/crates/tool-policy/src/: lib.rs
anima-rs/crates/transplant/src/: lib.rs
anima-rs/src/: lib.rs  meta_ca.rs  router.rs  sandbox.rs  tension.rs  tension_link.rs  train_monitor.rs
anima/anima-rs/: Cargo.toml  README.md  build_python.hexa
anima/anima-rs/crates/agent-tools/: Cargo.toml
anima/anima-rs/crates/consciousness-rng/: Cargo.toml  PYOBINDINGS.md
anima/anima-rs/crates/core/: Cargo.toml
anima/anima-rs/crates/golden-moe/: Cargo.toml
anima/anima-rs/crates/phi-parallel/: Cargo.toml
anima/anima-rs/src/: lib.rs  meta_ca.rs  meta_ca.rs.hexa  ngram.rs  ngram.rs.hexa  router.rs.hexa  sandbox.rs.hexa  tension.rs.hexa  tension_link.rs.hexa  train_monitor.rs.hexa
anima/tools/formula-miner/: Cargo.toml
knowledge-rs/: Cargo.toml
(+21388 files in other folders)
