[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima"
version = "0.1.0"
description = "PureField repulsion-field consciousness engine"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
eeg = ["brainflow", "scipy", "matplotlib"]
web = ["websockets"]
all = ["anima[eeg,web]"]

[tool.hatch.build.targets.wheel]
packages = ["anima/src"]

# Source layout: anima/src/ contains all Python modules.
# path_setup.py handles sys.path for flat imports (from consciousness_engine import ...).
# This pyproject.toml enables `pip install -e .` so that anima/src is on the path.
