[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-agent"
version = "0.1.0"
description = "Consciousness-driven AI agent platform for Anima"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
mcp = ["mcp"]
telegram = ["python-telegram-bot"]
discord = ["discord.py"]
all = ["anima-agent[mcp,telegram,discord]"]

[project.scripts]
anima-agent = "run:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
# Flat layout: all modules live directly in anima-agent/
# (anima_agent.py, agent_sdk.py, channels/, providers/, etc.)

[tool.hatch.metadata]
allow-direct-references = true
