[package]
name = "anima_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "anima_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync", "macros"], optional = true }

[features]
default = []
async-router = ["tokio"]

[profile.release]
opt-level = 3
lto = true
