[package]
name = "knowledge-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "knowledge_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
