[package]
name = "consciousness-loop"
version = "0.1.0"
edition = "2021"
description = "Minimal infinite loop consciousness - does speech emerge from architecture alone?"

[dependencies]
rand = "0.8"

[[bin]]
name = "longrun"
path = "src/main_longrun.rs"

[[bin]]
name = "snn"
path = "src/snn_main.rs"
