[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
rayon = "1.10"

[package]
name = "anima-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "anima_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
anima-core = { path = "crates/core" }
anima-talk5 = { path = "crates/talk5" }
anima-alpha-sweep = { path = "crates/alpha-sweep" }
anima-transplant = { path = "crates/transplant" }
anima-golden-moe = { path = "crates/golden-moe" }
anima-consciousness = { path = "crates/consciousness" }
anima-consciousness-ffi = { path = "crates/consciousness-ffi" }
anima-corpus-gen = { path = "crates/corpus-gen" }
anima-online-learner = { path = "crates/online-learner" }
anima-law-discovery = { path = "crates/law-discovery", features = ["pyo3"] }
anima-tool-policy = { path = "crates/tool-policy" }
anima-agent-tools = { path = "crates/agent-tools" }
# anima-esp32 = { path = "crates/esp32" }  # no_std, build separately

[profile.release]
opt-level = 3
lto = true
