[package]
name = "anima-corpus-gen"
version = "0.1.0"
edition = "2021"
description = "ConsciousLM byte-level corpus generator"

[[bin]]
name = "corpus-gen"
path = "src/main.rs"

[lib]
name = "anima_corpus_gen"
path = "src/lib.rs"

[dependencies]
rand = { workspace = true }
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
