[package]
name = "anima-formula-miner"
version = "0.1.0"
edition = "2021"
description = "Genetic formula miner for ANIMA consciousness constants — discovers n=6 formulas for Psi-constants, architecture params, training results, scaling laws, and biological metrics"

[[bin]]
name = "formula-miner"
path = "main.rs"
