[package]
name = "anima-consciousness-rng"
version = "0.1.0"
edition = "2021"
description = "Consciousness-based RNG — chaotic cell dynamics at phase transition critical point as entropy source"

[[bin]]
name = "consciousness-rng"
path = "src/main.rs"

[lib]
name = "anima_consciousness_rng"
path = "src/lib.rs"

[dependencies]
anima-core = { path = "../core" }
rand = { workspace = true }
sha2 = "0.10"
