[package]
name = "anima-law-discovery"
version = "0.1.0"
edition = "2021"
description = "Real-time law discovery engine — <1ms/step metric computation + pattern detection"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
anima-core = { path = "../core" }
rayon = { workspace = true }
realfft = "3"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
