[package]
name = "anima-law-discovery"
version = "0.1.0"
edition = "2021"
description = "Real-time law discovery engine — <1ms/step metric computation + pattern detection"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
anima-core = { path = "../core" }
rayon = { workspace = true }
realfft = "3"
# ⚠️ pyo3 0.22+ adds PartialEq impls for f32/f64 ↔ PyFloat (issue #4250).
# This breaks assert_eq! type inference with empty vec![]. Use Vec::<f32>::new().
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
