[package]
name = "anima-phi-parallel"
version = "0.1.0"
edition = "2021"
description = "Parallelized Phi(IIT) calculator using rayon — soft histogram MI + MIP search"

[lib]
name = "phi_parallel"

[dependencies]
rayon = { workspace = true }
ndarray = "0.16"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
numpy = { version = "0.28", optional = true }

[features]
default = []
pyo3 = ["dep:pyo3", "dep:numpy"]

[dev-dependencies]
rand = { workspace = true }
