[package]
name = "anima-consciousness-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI wrapper for ConsciousnessEngine — enables Verilog DPI-C, Erlang NIF, Pure Data external~"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anima-core = { path = "../core" }
anima-consciousness = { path = "../consciousness" }
