[package]
name = "evo-runner"
version = "0.1.0"
edition = "2021"
description = "Process supervisor for infinite_evolution.py --auto-roadmap"

[[bin]]
name = "evo-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
anyhow = "1"
