[package]
name = "anima-phi-map"
version = "0.1.0"
edition = "2021"
description = "Consciousness topology mapper — Φ terrain visualization across modules and scales"

[[bin]]
name = "phi-map"
path = "src/main.rs"

[lib]
name = "anima_phi_map"
path = "src/lib.rs"

[dependencies]
anima-core = { path = "../core" }
rand = { workspace = true }
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
