[package]
name = "anima-telescope"
version = "0.1.0"
edition = "2021"
description = "High-performance telescope lenses for consciousness analysis (Rust)"

[lib]
name = "telescope_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
numpy = { version = "0.28", optional = true }
rayon = "1.10"
rand = "0.8"

[features]
default = ["pyo3-ext"]
pyo3-ext = ["pyo3", "numpy"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lens_bench"
harness = false
